Completando QR code

--- a/index.html
+++ b/index.html
@@ -4,17 +4,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="Bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="Css/Style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;700&display=swap" rel="stylesheet">
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
-
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
+  <div class="container">
+    <div class="row mx-2 vh-100 justify-content-center align-items-center">
+      <div class="col-sm-3 col-md-8 col-lg-3 bg-light p-3 rounded-4 shadow">
+        <img class="img-fluid rounded-4" src="images/image-qr-code.png" alt="" srcset="">
+        <div class="px-2 pt-4 text-center paragraphStyle1">
+          <p>Improve your front-end skills by  building projects</p>
+        </div>
+        <div class="px-2 text-center paragraphStyle2">
+          <p>Scan the QR code  to visit Frontend Mentor and take your coding skills to the next level</p>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Bautista Carlos José Luis</a>.
   </div>
+  <script src="Bootstrap/bootstrap.bundle.min.js"></script>
 </body>
 </html>
